parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    APPEND
    BITWISEANDASSIGN
    BITWISECLEAR
    BITWISEOR
    BITWISEORASSIGN
    BITWISEXOR
    BITWISEXORASSIGN
    BREAK
    CASE
    COMPLEXV
    CONTINUE
    DEFAULT
    DEFER
    EQUAL
    ERROR
    FALLTHROUGH
    GO
    GOTO
    IMPORT
    INTERFACE
    LCORCHETE
    NOT
    PACKAGE
    RANGE
    RCORCHETE
    RETURN
    SELECT
    SHIFTLEFT
    SHIFTLEFTASSIGN
    SHIFTRIGHT
    SHIFTRIGHTASSIGN
    SPRINT
    SPRINTF
    SPRINTLN
    SWITCH

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaraciones
Rule 2     declaracion_entera_variable -> VAR VARIABLE INT ASSIGN operaciones_aritmetica_entero
Rule 3     comparador_entero -> INTV operador_relacional INTV
Rule 4     declaraciones -> declaracion_statement
Rule 5     declaraciones -> declaracion_statement SALTO_LINEA declaraciones
Rule 6     declaracion_statement -> declaracion_array
Rule 7     declaracion_statement -> declaracion_mapa
Rule 8     declaracion_statement -> declaracion_variable
Rule 9     declaracion_statement -> imprimir
Rule 10    declaracion_statement -> modificar_estructuras
Rule 11    declaracion_statement -> estructuraif
Rule 12    declaracion_statement -> estructuraif_else
Rule 13    declaracion_statement -> estructura_for
Rule 14    declaracion_statement -> funcion
Rule 15    declaracion_statement -> ONELINECOMMENT
Rule 16    declaracion_statement -> MULTILINECOMMENT
Rule 17    declaracion_statement -> leer_entradas
Rule 18    declaracion_statement -> comparador_entero
Rule 19    funcion -> FUNC MAIN LPARENTESIS RPARENTESIS LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
Rule 20    funcion -> FUNC VARIABLE LPARENTESIS RPARENTESIS LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
Rule 21    funcion -> FUNC VARIABLE LPARENTESIS parametros RPARENTESIS LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
Rule 22    parametros -> parametro
Rule 23    parametros -> parametro COMMA parametros
Rule 24    parametro -> VARIABLE type
Rule 25    estructuraif_else -> estructuraif ELSE condiciones LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
Rule 26    estructuraif -> IF condiciones LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
Rule 27    estructura_for -> FOR VARIABLE DECLARE_ASSIGN valor SEMICOLON VARIABLE operador_logico valor SEMICOLON VARIABLE operador_modifica_variable1 LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
Rule 28    estructura_for -> FOR VARIABLE DECLARE_ASSIGN valor SEMICOLON VARIABLE operador_logico valor SEMICOLON VARIABLE operador_modifica_variable2 valor LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
Rule 29    estructura_for -> FOR VARIABLE operador_logico LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
Rule 30    operador_modifica_variable1 -> INCREMENTO
Rule 31    operador_modifica_variable1 -> DECREMENTO
Rule 32    operador_modifica_variable2 -> ASSIGN
Rule 33    operador_modifica_variable2 -> PLUSA
Rule 34    operador_modifica_variable2 -> MINUSA
Rule 35    operador_modifica_variable2 -> TIMESA
Rule 36    operador_modifica_variable2 -> DIVA
Rule 37    operador_modifica_variable2 -> MODA
Rule 38    declaraciones_tabs -> declaracion_statement_tabs
Rule 39    declaraciones_tabs -> declaracion_statement_tabs SALTO_LINEA declaraciones_tabs
Rule 40    declaracion_statement_tabs -> TAB declaracion_array
Rule 41    declaracion_statement_tabs -> TAB declaracion_mapa
Rule 42    declaracion_statement_tabs -> TAB declaracion_variable
Rule 43    declaracion_statement_tabs -> TAB imprimir
Rule 44    declaracion_statement_tabs -> TAB modificar_estructuras
Rule 45    declaracion_statement_tabs -> TAB estructuraif
Rule 46    declaracion_statement_tabs -> TAB estructuraif_else
Rule 47    declaracion_statement_tabs -> TAB estructura_for
Rule 48    declaracion_statement_tabs -> TAB funcion
Rule 49    declaracion_statement_tabs -> TAB ONELINECOMMENT
Rule 50    declaracion_statement_tabs -> TAB MULTILINECOMMENT
Rule 51    declaracion_statement_tabs -> TAB leer_entradas
Rule 52    condiciones -> condicion
Rule 53    condiciones -> condicion operador_logico condiciones
Rule 54    condicion -> VARIABLE operador_relacional valor
Rule 55    operaciones_aritmetica_entero -> operacion_aritmetica_entero
Rule 56    operaciones_aritmetica_entero -> operacion_aritmetica_entero operador operaciones_aritmetica_entero
Rule 57    operacion_aritmetica_entero -> INTV
Rule 58    operacion_aritmetica_entero -> INTV operador INTV
Rule 59    declaracion_variable -> VAR VARIABLE type ASSIGN operaciones_aritmeticas
Rule 60    declaracion_variable -> VAR asignacion
Rule 61    declaracion_variable -> VAR variables type
Rule 62    declaracion_variable -> VAR VARIABLE type
Rule 63    declaracion_variable -> VARIABLE DECLARE_ASSIGN valor
Rule 64    declaracion_variable -> CONST VARIABLE ASSIGN operacion_aritmetica
Rule 65    declaracion_variable -> VAR LPARENTESIS SALTO_LINEA declaraciones_sencillas SALTO_LINEA RPARENTESIS
Rule 66    declaracion_variable -> CONST LPARENTESIS SALTO_LINEA declaraciones_sencillas SALTO_LINEA RPARENTESIS
Rule 67    declaracion_array -> VARIABLE DECLARE_ASSIGN ARRAY LLLAVE valores RLLAVE
Rule 68    declaracion_array -> VAR VARIABLE ASSIGN ARRAY LLLAVE valores RLLAVE
Rule 69    declaracion_mapa -> VARIABLE DECLARE_ASSIGN MAP LLLAVE pares RLLAVE
Rule 70    modificar_estructuras -> agregar_elemento_array
Rule 71    pares -> par
Rule 72    pares -> par COMMA pares
Rule 73    par -> valor COLON valor
Rule 74    agregar_elemento_array -> ARRAYMOD ASSIGN valor
Rule 75    imprimir -> FMT DOT PRINTLN LPARENTESIS operaciones_aritmeticas RPARENTESIS
Rule 76    imprimir -> FMT DOT PRINT LPARENTESIS operaciones_aritmeticas RPARENTESIS
Rule 77    imprimir -> FMT DOT PRINTF LPARENTESIS operaciones_aritmeticas RPARENTESIS
Rule 78    leer_entradas -> FMT DOT SCAN LPARENTESIS parametros_scan RPARENTESIS
Rule 79    leer_entradas -> FMT DOT SCANLN LPARENTESIS parametros_scan RPARENTESIS
Rule 80    leer_entradas -> FMT DOT SCANF LPARENTESIS FORMATO COMMA parametros_scan RPARENTESIS
Rule 81    parametros_scan -> parametro_scan
Rule 82    parametros_scan -> parametro_scan COMMA parametros_scan
Rule 83    parametro_scan -> BITWISEAND VARIABLE
Rule 84    asignacion -> VARIABLE ASSIGN valor
Rule 85    valores -> valor
Rule 86    valores -> valor COMMA valores
Rule 87    variables -> VARIABLE
Rule 88    variables -> VARIABLE COMMA variables
Rule 89    operacion_aritmetica -> valor
Rule 90    operacion_aritmetica -> valor operador operacion_aritmetica
Rule 91    operaciones_aritmeticas -> operacion_aritmetica
Rule 92    operaciones_aritmeticas -> operacion_aritmetica COMMA operaciones_aritmeticas
Rule 93    declaraciones_sencillas -> asignacion
Rule 94    declaraciones_sencillas -> asignacion TAB declaraciones_sencillas
Rule 95    type -> BOOL
Rule 96    type -> INT
Rule 97    type -> FLOAT
Rule 98    type -> UINT
Rule 99    type -> STRING
Rule 100   type -> COMPLEX
Rule 101   type -> ARRAY
Rule 102   type -> SLICE
Rule 103   type -> MAP
Rule 104   operador -> PLUS
Rule 105   operador -> MINUS
Rule 106   operador -> MOD
Rule 107   operador -> TIMES
Rule 108   operador -> DIV
Rule 109   valor -> BOOLV
Rule 110   valor -> INTV
Rule 111   valor -> FLOATV
Rule 112   valor -> UINTV
Rule 113   valor -> STRINGV
Rule 114   valor -> VARIABLE
Rule 115   valor -> SLICEV
Rule 116   operador_relacional -> EQ
Rule 117   operador_relacional -> NEQ
Rule 118   operador_relacional -> LT
Rule 119   operador_relacional -> GT
Rule 120   operador_relacional -> LTOEQ
Rule 121   operador_relacional -> GTOEQ
Rule 122   operador_logico -> AND
Rule 123   operador_logico -> OR

Terminals, with rules where they appear

AND                  : 122
APPEND               : 
ARRAY                : 67 68 101
ARRAYMOD             : 74
ASSIGN               : 2 32 59 64 68 74 84
BITWISEAND           : 83
BITWISEANDASSIGN     : 
BITWISECLEAR         : 
BITWISEOR            : 
BITWISEORASSIGN      : 
BITWISEXOR           : 
BITWISEXORASSIGN     : 
BOOL                 : 95
BOOLV                : 109
BREAK                : 
CASE                 : 
COLON                : 73
COMMA                : 23 72 80 82 86 88 92
COMPLEX              : 100
COMPLEXV             : 
CONST                : 64 66
CONTINUE             : 
DECLARE_ASSIGN       : 27 28 63 67 69
DECREMENTO           : 31
DEFAULT              : 
DEFER                : 
DIV                  : 108
DIVA                 : 36
DOT                  : 75 76 77 78 79 80
ELSE                 : 25
EQ                   : 116
EQUAL                : 
ERROR                : 
FALLTHROUGH          : 
FLOAT                : 97
FLOATV               : 111
FMT                  : 75 76 77 78 79 80
FOR                  : 27 28 29
FORMATO              : 80
FUNC                 : 19 20 21
GO                   : 
GOTO                 : 
GT                   : 119
GTOEQ                : 121
IF                   : 26
IMPORT               : 
INCREMENTO           : 30
INT                  : 2 96
INTERFACE            : 
INTV                 : 3 3 57 58 58 110
LCORCHETE            : 
LLLAVE               : 19 20 21 25 26 27 28 29 67 68 69
LPARENTESIS          : 19 20 21 65 66 75 76 77 78 79 80
LT                   : 118
LTOEQ                : 120
MAIN                 : 19
MAP                  : 69 103
MINUS                : 105
MINUSA               : 34
MOD                  : 106
MODA                 : 37
MULTILINECOMMENT     : 16 50
NEQ                  : 117
NOT                  : 
ONELINECOMMENT       : 15 49
OR                   : 123
PACKAGE              : 
PLUS                 : 104
PLUSA                : 33
PRINT                : 76
PRINTF               : 77
PRINTLN              : 75
RANGE                : 
RCORCHETE            : 
RETURN               : 
RLLAVE               : 19 20 21 25 26 27 28 29 67 68 69
RPARENTESIS          : 19 20 21 65 66 75 76 77 78 79 80
SALTO_LINEA          : 5 19 19 20 20 21 21 25 25 26 26 27 27 28 28 29 29 39 65 65 66 66
SCAN                 : 78
SCANF                : 80
SCANLN               : 79
SELECT               : 
SEMICOLON            : 27 27 28 28
SHIFTLEFT            : 
SHIFTLEFTASSIGN      : 
SHIFTRIGHT           : 
SHIFTRIGHTASSIGN     : 
SLICE                : 102
SLICEV               : 115
SPRINT               : 
SPRINTF              : 
SPRINTLN             : 
STRING               : 99
STRINGV              : 113
SWITCH               : 
TAB                  : 40 41 42 43 44 45 46 47 48 49 50 51 94
TIMES                : 107
TIMESA               : 35
UINT                 : 98
UINTV                : 112
VAR                  : 2 59 60 61 62 65 68
VARIABLE             : 2 20 21 24 27 27 27 28 28 28 29 54 59 62 63 64 67 68 69 83 84 87 88 114
error                : 

Nonterminals, with rules where they appear

agregar_elemento_array : 70
asignacion           : 60 93 94
comparador_entero    : 18
condicion            : 52 53
condiciones          : 25 26 53
declaracion_array    : 6 40
declaracion_entera_variable : 
declaracion_mapa     : 7 41
declaracion_statement : 4 5
declaracion_statement_tabs : 38 39
declaracion_variable : 8 42
declaraciones        : 1 5
declaraciones_sencillas : 65 66 94
declaraciones_tabs   : 19 20 21 25 26 27 28 29 39
estructura_for       : 13 47
estructuraif         : 11 25 45
estructuraif_else    : 12 46
funcion              : 14 48
imprimir             : 9 43
leer_entradas        : 17 51
modificar_estructuras : 10 44
operacion_aritmetica : 64 90 91 92
operacion_aritmetica_entero : 55 56
operaciones_aritmetica_entero : 2 56
operaciones_aritmeticas : 59 75 76 77 92
operador             : 56 58 90
operador_logico      : 27 28 29 53
operador_modifica_variable1 : 27
operador_modifica_variable2 : 28
operador_relacional  : 3 54
par                  : 71 72
parametro            : 22 23
parametro_scan       : 81 82
parametros           : 21 23
parametros_scan      : 78 79 80 82
pares                : 69 72
programa             : 0
type                 : 24 59 61 62
valor                : 27 27 28 28 28 54 63 73 73 74 84 85 86 89 90
valores              : 67 68 86
variables            : 61 88

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaraciones
    (4) declaraciones -> . declaracion_statement
    (5) declaraciones -> . declaracion_statement SALTO_LINEA declaraciones
    (6) declaracion_statement -> . declaracion_array
    (7) declaracion_statement -> . declaracion_mapa
    (8) declaracion_statement -> . declaracion_variable
    (9) declaracion_statement -> . imprimir
    (10) declaracion_statement -> . modificar_estructuras
    (11) declaracion_statement -> . estructuraif
    (12) declaracion_statement -> . estructuraif_else
    (13) declaracion_statement -> . estructura_for
    (14) declaracion_statement -> . funcion
    (15) declaracion_statement -> . ONELINECOMMENT
    (16) declaracion_statement -> . MULTILINECOMMENT
    (17) declaracion_statement -> . leer_entradas
    (18) declaracion_statement -> . comparador_entero
    (67) declaracion_array -> . VARIABLE DECLARE_ASSIGN ARRAY LLLAVE valores RLLAVE
    (68) declaracion_array -> . VAR VARIABLE ASSIGN ARRAY LLLAVE valores RLLAVE
    (69) declaracion_mapa -> . VARIABLE DECLARE_ASSIGN MAP LLLAVE pares RLLAVE
    (59) declaracion_variable -> . VAR VARIABLE type ASSIGN operaciones_aritmeticas
    (60) declaracion_variable -> . VAR asignacion
    (61) declaracion_variable -> . VAR variables type
    (62) declaracion_variable -> . VAR VARIABLE type
    (63) declaracion_variable -> . VARIABLE DECLARE_ASSIGN valor
    (64) declaracion_variable -> . CONST VARIABLE ASSIGN operacion_aritmetica
    (65) declaracion_variable -> . VAR LPARENTESIS SALTO_LINEA declaraciones_sencillas SALTO_LINEA RPARENTESIS
    (66) declaracion_variable -> . CONST LPARENTESIS SALTO_LINEA declaraciones_sencillas SALTO_LINEA RPARENTESIS
    (75) imprimir -> . FMT DOT PRINTLN LPARENTESIS operaciones_aritmeticas RPARENTESIS
    (76) imprimir -> . FMT DOT PRINT LPARENTESIS operaciones_aritmeticas RPARENTESIS
    (77) imprimir -> . FMT DOT PRINTF LPARENTESIS operaciones_aritmeticas RPARENTESIS
    (70) modificar_estructuras -> . agregar_elemento_array
    (26) estructuraif -> . IF condiciones LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (25) estructuraif_else -> . estructuraif ELSE condiciones LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (27) estructura_for -> . FOR VARIABLE DECLARE_ASSIGN valor SEMICOLON VARIABLE operador_logico valor SEMICOLON VARIABLE operador_modifica_variable1 LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (28) estructura_for -> . FOR VARIABLE DECLARE_ASSIGN valor SEMICOLON VARIABLE operador_logico valor SEMICOLON VARIABLE operador_modifica_variable2 valor LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (29) estructura_for -> . FOR VARIABLE operador_logico LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (19) funcion -> . FUNC MAIN LPARENTESIS RPARENTESIS LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (20) funcion -> . FUNC VARIABLE LPARENTESIS RPARENTESIS LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (21) funcion -> . FUNC VARIABLE LPARENTESIS parametros RPARENTESIS LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (78) leer_entradas -> . FMT DOT SCAN LPARENTESIS parametros_scan RPARENTESIS
    (79) leer_entradas -> . FMT DOT SCANLN LPARENTESIS parametros_scan RPARENTESIS
    (80) leer_entradas -> . FMT DOT SCANF LPARENTESIS FORMATO COMMA parametros_scan RPARENTESIS
    (3) comparador_entero -> . INTV operador_relacional INTV
    (74) agregar_elemento_array -> . ARRAYMOD ASSIGN valor

    ONELINECOMMENT  shift and go to state 13
    MULTILINECOMMENT shift and go to state 14
    VARIABLE        shift and go to state 17
    VAR             shift and go to state 18
    CONST           shift and go to state 19
    FMT             shift and go to state 20
    IF              shift and go to state 22
    FOR             shift and go to state 23
    FUNC            shift and go to state 24
    INTV            shift and go to state 25
    ARRAYMOD        shift and go to state 26

    programa                       shift and go to state 1
    declaraciones                  shift and go to state 2
    declaracion_statement          shift and go to state 3
    declaracion_array              shift and go to state 4
    declaracion_mapa               shift and go to state 5
    declaracion_variable           shift and go to state 6
    imprimir                       shift and go to state 7
    modificar_estructuras          shift and go to state 8
    estructuraif                   shift and go to state 9
    estructuraif_else              shift and go to state 10
    estructura_for                 shift and go to state 11
    funcion                        shift and go to state 12
    leer_entradas                  shift and go to state 15
    comparador_entero              shift and go to state 16
    agregar_elemento_array         shift and go to state 21

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaraciones .

    $end            reduce using rule 1 (programa -> declaraciones .)


state 3

    (4) declaraciones -> declaracion_statement .
    (5) declaraciones -> declaracion_statement . SALTO_LINEA declaraciones

    $end            reduce using rule 4 (declaraciones -> declaracion_statement .)
    SALTO_LINEA     shift and go to state 27


state 4

    (6) declaracion_statement -> declaracion_array .

    SALTO_LINEA     reduce using rule 6 (declaracion_statement -> declaracion_array .)
    $end            reduce using rule 6 (declaracion_statement -> declaracion_array .)


state 5

    (7) declaracion_statement -> declaracion_mapa .

    SALTO_LINEA     reduce using rule 7 (declaracion_statement -> declaracion_mapa .)
    $end            reduce using rule 7 (declaracion_statement -> declaracion_mapa .)


state 6

    (8) declaracion_statement -> declaracion_variable .

    SALTO_LINEA     reduce using rule 8 (declaracion_statement -> declaracion_variable .)
    $end            reduce using rule 8 (declaracion_statement -> declaracion_variable .)


state 7

    (9) declaracion_statement -> imprimir .

    SALTO_LINEA     reduce using rule 9 (declaracion_statement -> imprimir .)
    $end            reduce using rule 9 (declaracion_statement -> imprimir .)


state 8

    (10) declaracion_statement -> modificar_estructuras .

    SALTO_LINEA     reduce using rule 10 (declaracion_statement -> modificar_estructuras .)
    $end            reduce using rule 10 (declaracion_statement -> modificar_estructuras .)


state 9

    (11) declaracion_statement -> estructuraif .
    (25) estructuraif_else -> estructuraif . ELSE condiciones LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE

    SALTO_LINEA     reduce using rule 11 (declaracion_statement -> estructuraif .)
    $end            reduce using rule 11 (declaracion_statement -> estructuraif .)
    ELSE            shift and go to state 28


state 10

    (12) declaracion_statement -> estructuraif_else .

    SALTO_LINEA     reduce using rule 12 (declaracion_statement -> estructuraif_else .)
    $end            reduce using rule 12 (declaracion_statement -> estructuraif_else .)


state 11

    (13) declaracion_statement -> estructura_for .

    SALTO_LINEA     reduce using rule 13 (declaracion_statement -> estructura_for .)
    $end            reduce using rule 13 (declaracion_statement -> estructura_for .)


state 12

    (14) declaracion_statement -> funcion .

    SALTO_LINEA     reduce using rule 14 (declaracion_statement -> funcion .)
    $end            reduce using rule 14 (declaracion_statement -> funcion .)


state 13

    (15) declaracion_statement -> ONELINECOMMENT .

    SALTO_LINEA     reduce using rule 15 (declaracion_statement -> ONELINECOMMENT .)
    $end            reduce using rule 15 (declaracion_statement -> ONELINECOMMENT .)


state 14

    (16) declaracion_statement -> MULTILINECOMMENT .

    SALTO_LINEA     reduce using rule 16 (declaracion_statement -> MULTILINECOMMENT .)
    $end            reduce using rule 16 (declaracion_statement -> MULTILINECOMMENT .)


state 15

    (17) declaracion_statement -> leer_entradas .

    SALTO_LINEA     reduce using rule 17 (declaracion_statement -> leer_entradas .)
    $end            reduce using rule 17 (declaracion_statement -> leer_entradas .)


state 16

    (18) declaracion_statement -> comparador_entero .

    SALTO_LINEA     reduce using rule 18 (declaracion_statement -> comparador_entero .)
    $end            reduce using rule 18 (declaracion_statement -> comparador_entero .)


state 17

    (67) declaracion_array -> VARIABLE . DECLARE_ASSIGN ARRAY LLLAVE valores RLLAVE
    (69) declaracion_mapa -> VARIABLE . DECLARE_ASSIGN MAP LLLAVE pares RLLAVE
    (63) declaracion_variable -> VARIABLE . DECLARE_ASSIGN valor

    DECLARE_ASSIGN  shift and go to state 29


state 18

    (68) declaracion_array -> VAR . VARIABLE ASSIGN ARRAY LLLAVE valores RLLAVE
    (59) declaracion_variable -> VAR . VARIABLE type ASSIGN operaciones_aritmeticas
    (60) declaracion_variable -> VAR . asignacion
    (61) declaracion_variable -> VAR . variables type
    (62) declaracion_variable -> VAR . VARIABLE type
    (65) declaracion_variable -> VAR . LPARENTESIS SALTO_LINEA declaraciones_sencillas SALTO_LINEA RPARENTESIS
    (84) asignacion -> . VARIABLE ASSIGN valor
    (87) variables -> . VARIABLE
    (88) variables -> . VARIABLE COMMA variables

    VARIABLE        shift and go to state 30
    LPARENTESIS     shift and go to state 33

    asignacion                     shift and go to state 31
    variables                      shift and go to state 32

state 19

    (64) declaracion_variable -> CONST . VARIABLE ASSIGN operacion_aritmetica
    (66) declaracion_variable -> CONST . LPARENTESIS SALTO_LINEA declaraciones_sencillas SALTO_LINEA RPARENTESIS

    VARIABLE        shift and go to state 34
    LPARENTESIS     shift and go to state 35


state 20

    (75) imprimir -> FMT . DOT PRINTLN LPARENTESIS operaciones_aritmeticas RPARENTESIS
    (76) imprimir -> FMT . DOT PRINT LPARENTESIS operaciones_aritmeticas RPARENTESIS
    (77) imprimir -> FMT . DOT PRINTF LPARENTESIS operaciones_aritmeticas RPARENTESIS
    (78) leer_entradas -> FMT . DOT SCAN LPARENTESIS parametros_scan RPARENTESIS
    (79) leer_entradas -> FMT . DOT SCANLN LPARENTESIS parametros_scan RPARENTESIS
    (80) leer_entradas -> FMT . DOT SCANF LPARENTESIS FORMATO COMMA parametros_scan RPARENTESIS

    DOT             shift and go to state 36


state 21

    (70) modificar_estructuras -> agregar_elemento_array .

    SALTO_LINEA     reduce using rule 70 (modificar_estructuras -> agregar_elemento_array .)
    $end            reduce using rule 70 (modificar_estructuras -> agregar_elemento_array .)


state 22

    (26) estructuraif -> IF . condiciones LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (52) condiciones -> . condicion
    (53) condiciones -> . condicion operador_logico condiciones
    (54) condicion -> . VARIABLE operador_relacional valor

    VARIABLE        shift and go to state 39

    condiciones                    shift and go to state 37
    condicion                      shift and go to state 38

state 23

    (27) estructura_for -> FOR . VARIABLE DECLARE_ASSIGN valor SEMICOLON VARIABLE operador_logico valor SEMICOLON VARIABLE operador_modifica_variable1 LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (28) estructura_for -> FOR . VARIABLE DECLARE_ASSIGN valor SEMICOLON VARIABLE operador_logico valor SEMICOLON VARIABLE operador_modifica_variable2 valor LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (29) estructura_for -> FOR . VARIABLE operador_logico LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE

    VARIABLE        shift and go to state 40


state 24

    (19) funcion -> FUNC . MAIN LPARENTESIS RPARENTESIS LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (20) funcion -> FUNC . VARIABLE LPARENTESIS RPARENTESIS LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (21) funcion -> FUNC . VARIABLE LPARENTESIS parametros RPARENTESIS LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE

    MAIN            shift and go to state 41
    VARIABLE        shift and go to state 42


state 25

    (3) comparador_entero -> INTV . operador_relacional INTV
    (116) operador_relacional -> . EQ
    (117) operador_relacional -> . NEQ
    (118) operador_relacional -> . LT
    (119) operador_relacional -> . GT
    (120) operador_relacional -> . LTOEQ
    (121) operador_relacional -> . GTOEQ

    EQ              shift and go to state 44
    NEQ             shift and go to state 45
    LT              shift and go to state 46
    GT              shift and go to state 47
    LTOEQ           shift and go to state 48
    GTOEQ           shift and go to state 49

    operador_relacional            shift and go to state 43

state 26

    (74) agregar_elemento_array -> ARRAYMOD . ASSIGN valor

    ASSIGN          shift and go to state 50


state 27

    (5) declaraciones -> declaracion_statement SALTO_LINEA . declaraciones
    (4) declaraciones -> . declaracion_statement
    (5) declaraciones -> . declaracion_statement SALTO_LINEA declaraciones
    (6) declaracion_statement -> . declaracion_array
    (7) declaracion_statement -> . declaracion_mapa
    (8) declaracion_statement -> . declaracion_variable
    (9) declaracion_statement -> . imprimir
    (10) declaracion_statement -> . modificar_estructuras
    (11) declaracion_statement -> . estructuraif
    (12) declaracion_statement -> . estructuraif_else
    (13) declaracion_statement -> . estructura_for
    (14) declaracion_statement -> . funcion
    (15) declaracion_statement -> . ONELINECOMMENT
    (16) declaracion_statement -> . MULTILINECOMMENT
    (17) declaracion_statement -> . leer_entradas
    (18) declaracion_statement -> . comparador_entero
    (67) declaracion_array -> . VARIABLE DECLARE_ASSIGN ARRAY LLLAVE valores RLLAVE
    (68) declaracion_array -> . VAR VARIABLE ASSIGN ARRAY LLLAVE valores RLLAVE
    (69) declaracion_mapa -> . VARIABLE DECLARE_ASSIGN MAP LLLAVE pares RLLAVE
    (59) declaracion_variable -> . VAR VARIABLE type ASSIGN operaciones_aritmeticas
    (60) declaracion_variable -> . VAR asignacion
    (61) declaracion_variable -> . VAR variables type
    (62) declaracion_variable -> . VAR VARIABLE type
    (63) declaracion_variable -> . VARIABLE DECLARE_ASSIGN valor
    (64) declaracion_variable -> . CONST VARIABLE ASSIGN operacion_aritmetica
    (65) declaracion_variable -> . VAR LPARENTESIS SALTO_LINEA declaraciones_sencillas SALTO_LINEA RPARENTESIS
    (66) declaracion_variable -> . CONST LPARENTESIS SALTO_LINEA declaraciones_sencillas SALTO_LINEA RPARENTESIS
    (75) imprimir -> . FMT DOT PRINTLN LPARENTESIS operaciones_aritmeticas RPARENTESIS
    (76) imprimir -> . FMT DOT PRINT LPARENTESIS operaciones_aritmeticas RPARENTESIS
    (77) imprimir -> . FMT DOT PRINTF LPARENTESIS operaciones_aritmeticas RPARENTESIS
    (70) modificar_estructuras -> . agregar_elemento_array
    (26) estructuraif -> . IF condiciones LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (25) estructuraif_else -> . estructuraif ELSE condiciones LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (27) estructura_for -> . FOR VARIABLE DECLARE_ASSIGN valor SEMICOLON VARIABLE operador_logico valor SEMICOLON VARIABLE operador_modifica_variable1 LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (28) estructura_for -> . FOR VARIABLE DECLARE_ASSIGN valor SEMICOLON VARIABLE operador_logico valor SEMICOLON VARIABLE operador_modifica_variable2 valor LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (29) estructura_for -> . FOR VARIABLE operador_logico LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (19) funcion -> . FUNC MAIN LPARENTESIS RPARENTESIS LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (20) funcion -> . FUNC VARIABLE LPARENTESIS RPARENTESIS LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (21) funcion -> . FUNC VARIABLE LPARENTESIS parametros RPARENTESIS LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (78) leer_entradas -> . FMT DOT SCAN LPARENTESIS parametros_scan RPARENTESIS
    (79) leer_entradas -> . FMT DOT SCANLN LPARENTESIS parametros_scan RPARENTESIS
    (80) leer_entradas -> . FMT DOT SCANF LPARENTESIS FORMATO COMMA parametros_scan RPARENTESIS
    (3) comparador_entero -> . INTV operador_relacional INTV
    (74) agregar_elemento_array -> . ARRAYMOD ASSIGN valor

    ONELINECOMMENT  shift and go to state 13
    MULTILINECOMMENT shift and go to state 14
    VARIABLE        shift and go to state 17
    VAR             shift and go to state 18
    CONST           shift and go to state 19
    FMT             shift and go to state 20
    IF              shift and go to state 22
    FOR             shift and go to state 23
    FUNC            shift and go to state 24
    INTV            shift and go to state 25
    ARRAYMOD        shift and go to state 26

    declaracion_statement          shift and go to state 3
    declaraciones                  shift and go to state 51
    declaracion_array              shift and go to state 4
    declaracion_mapa               shift and go to state 5
    declaracion_variable           shift and go to state 6
    imprimir                       shift and go to state 7
    modificar_estructuras          shift and go to state 8
    estructuraif                   shift and go to state 9
    estructuraif_else              shift and go to state 10
    estructura_for                 shift and go to state 11
    funcion                        shift and go to state 12
    leer_entradas                  shift and go to state 15
    comparador_entero              shift and go to state 16
    agregar_elemento_array         shift and go to state 21

state 28

    (25) estructuraif_else -> estructuraif ELSE . condiciones LLLAVE SALTO_LINEA declaraciones_tabs SALTO_LINEA RLLAVE
    (52) condiciones -> . condicion
    (53) condiciones -> . condicion operador_logico condiciones
    (54) condicion -> . VARIABLE operador_relacional valor

    VARIABLE        shift and go to state 39

    condiciones                    shift and go to state 52
    condicion                      shift and go to state 38

state 29

    (67) declaracion_array -> VARIABLE DECLARE_ASSIGN . ARRAY LLLAVE valores RLLAVE
    (69) declaracion_mapa -> VARIABLE DECLARE_ASSIGN . MAP LLLAVE pares RLLAVE
    (63) declaracion_variable -> VARIABLE DECLARE_ASSIGN . valor
    (109) valor -> . BOOLV
    (110) valor -> . INTV
    (111) valor -> . FLOATV
    (112) valor -> . UINTV
    (113) valor -> . STRINGV
    (114) valor -> . VARIABLE
    (115) valor -> . SLICEV

    ARRAY           shift and go to state 54
    MAP             shift and go to state 55
    BOOLV           shift and go to state 57
    INTV            shift and go to state 58
    FLOATV          shift and go to state 59
    UINTV           shift and go to state 60
    STRINGV         shift and go to state 61
    VARIABLE        shift and go to state 53
    SLICEV          shift and go to state 62

    valor                          shift and go to state 56

state 30
